CHIBOX-117 check device class in full-on mode